[gd_scene load_steps=11 format=3 uid="uid://cyd6nefd7jt01"]

[ext_resource type="Script" path="res://Scripts/start_screen.gd" id="1_wiop7"]
[ext_resource type="Texture2D" uid="uid://bnuqs4rl2l11r" path="res://Assets/Scenes/Seasonal Tilesets/1 - Grassland/Background parts/_Complete_static_BG_(288 x 208).png" id="2_e43gx"]
[ext_resource type="TileSet" uid="uid://u8n223okdf5m" path="res://Tiles/BaseTilemap.tres" id="3_jet7m"]
[ext_resource type="FontFile" uid="uid://cqdrreoeeopoj" path="res://Fonts/Minecraft.ttf" id="4_3162m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g2jgp"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4fi57"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y3xrt"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_33mbo"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ar3o0"]

[sub_resource type="Theme" id="Theme_o3v4d"]
Button/colors/font_color = Color(0, 0, 0, 1)
Button/colors/font_disabled_color = Color(0, 0, 0, 1)
Button/colors/font_focus_color = Color(0, 0, 0, 1)
Button/colors/font_hover_color = Color(0, 0, 0, 1)
Button/colors/font_hover_pressed_color = Color(0, 0, 0, 1)
Button/colors/font_outline_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(0, 0, 0, 1)
Button/colors/icon_disabled_color = Color(0, 0, 0, 1)
Button/colors/icon_focus_color = Color(0, 0, 0, 1)
Button/colors/icon_hover_color = Color(0, 0, 0, 1)
Button/colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
Button/colors/icon_normal_color = Color(0, 0, 0, 1)
Button/colors/icon_pressed_color = Color(0, 0, 0, 1)
Button/constants/h_separation = 0
Button/constants/outline_size = 0
Button/font_sizes/font_size = 16
Button/fonts/font = null
Button/styles/disabled = SubResource("StyleBoxFlat_g2jgp")
Button/styles/focus = SubResource("StyleBoxFlat_4fi57")
Button/styles/hover = SubResource("StyleBoxFlat_y3xrt")
Button/styles/normal = SubResource("StyleBoxFlat_33mbo")
Button/styles/pressed = SubResource("StyleBoxFlat_ar3o0")

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wiop7")

[node name="fundo" type="Node2D" parent="."]

[node name="fundo" type="Sprite2D" parent="fundo"]
position = Vector2(161, 103)
texture = ExtResource("2_e43gx")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0235294, 0.0235294, 0.0235294, 0.427451)

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("3_jet7m")
format = 2
layer_0/tile_data = PackedInt32Array(0, 0, 0, 720896, 0, 2, 720915, 131072, 2, 19, 131072, 0, 65555, 131072, 1, 131091, 131072, 1, 196627, 131072, 1, 262163, 131072, 1, 327699, 131072, 1, 393235, 131072, 1, 458771, 131072, 1, 524307, 131072, 1, 589843, 131072, 1, 655379, 131072, 1, 720914, 65536, 2, 720913, 65536, 2, 720912, 65536, 2, 720911, 65536, 2, 720910, 65536, 2, 720909, 65536, 2, 720908, 65536, 2, 720907, 65536, 2, 720906, 65536, 2, 720905, 65536, 2, 720904, 65536, 2, 720903, 65536, 2, 720902, 65536, 2, 720901, 65536, 2, 720900, 65536, 2, 720899, 65536, 2, 720898, 65536, 2, 720897, 65536, 2, 655360, 0, 1, 589824, 0, 1, 524288, 0, 1, 458752, 0, 1, 393216, 0, 1, 327680, 0, 1, 262144, 0, 1, 196608, 0, 1, 131072, 0, 1, 65536, 0, 1, 1, 65536, 0, 2, 65536, 0, 3, 65536, 0, 4, 65536, 0, 5, 65536, 0, 6, 65536, 0, 7, 65536, 0, 8, 65536, 0, 9, 65536, 0, 10, 65536, 0, 11, 65536, 0, 12, 65536, 0, 13, 65536, 0, 14, 65536, 0, 15, 65536, 0, 16, 65536, 0, 17, 65536, 0, 18, 65536, 0)

[node name="controls" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.5
offset_top = -38.0
offset_right = 32.5
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="controls"]
texture_filter = 1
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_3162m")
theme_override_font_sizes/font_size = 22
text = "O Construtor de Palavras"
horizontal_alignment = 1
vertical_alignment = 1

[node name="btnStart" type="Button" parent="controls"]
texture_filter = 1
layout_mode = 2
focus_neighbor_top = NodePath("../btnCreditos")
theme = SubResource("Theme_o3v4d")
theme_override_colors/font_color = Color(0.968627, 0.968627, 0.968627, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.772549, 1, 0.152941, 1)
theme_override_colors/font_focus_color = Color(0.968627, 0.992157, 0, 1)
theme_override_fonts/font = ExtResource("4_3162m")
text = "Start"

[node name="btnControls" type="Button" parent="controls"]
texture_filter = 1
layout_mode = 2
theme = SubResource("Theme_o3v4d")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.772549, 1, 0.152941, 1)
theme_override_colors/font_focus_color = Color(0.968627, 0.992157, 0, 1)
theme_override_fonts/font = ExtResource("4_3162m")
text = "Controls"

[node name="btnQuit" type="Button" parent="controls"]
texture_filter = 1
layout_mode = 2
theme = SubResource("Theme_o3v4d")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.772549, 1, 0.152941, 1)
theme_override_colors/font_focus_color = Color(0.968627, 0.992157, 0, 1)
theme_override_fonts/font = ExtResource("4_3162m")
text = "Quit"

[node name="btnCreditos" type="Button" parent="controls"]
texture_filter = 1
layout_mode = 2
focus_neighbor_bottom = NodePath("../btnStart")
theme = SubResource("Theme_o3v4d")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.772549, 1, 0.152941, 1)
theme_override_colors/font_focus_color = Color(0.968627, 0.992157, 0, 1)
theme_override_fonts/font = ExtResource("4_3162m")
text = "Creditos"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="pressed" from="controls/btnStart" to="." method="_on_btn_start_pressed"]
[connection signal="pressed" from="controls/btnControls" to="." method="_on_btn_controls_pressed"]
[connection signal="pressed" from="controls/btnQuit" to="." method="_on_btn_quit_pressed"]
[connection signal="pressed" from="controls/btnCreditos" to="." method="_on_btn_creditos_pressed"]
